welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not found: value T
  T=col()
  ^Array1:11: error: not found: value T
    recop(h,j,l,T)
                ^